--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1\;RUNSCRIPT FROM 'classpath:h2/h2-ddl.sql';</h2.url>
+        <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1;</h2.url>
 
         <!-- Main configuration -->
         <spring-boot-starter.version>2.3.5.RELEASE</spring-boot-starter.version>
