--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,5 +14,5 @@ logging:
   level:
     org:
       springframework:
-        web: DEBUG
-      hibernate: ERROR
+        web: INFO
+      hibernate: INFO
