VAR-60 Поправил логирование

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jsoup.version>1.13.1</jsoup.version>
         <postgresql.version>42.2.18</postgresql.version>
         <liquibase-core.version>4.2.0</liquibase-core.version>
+        <commons-lang3.version>3.11</commons-lang3.version>
 
         <!-- Tests configuration -->
         <h2.version>1.4.200</h2.version>
@@ -103,6 +104,11 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>${liquibase-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
