--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
         <testng.version>7.2.0</testng.version>
 
         <!-- Plugin configuration -->
+        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
+        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <frontend-maven-plugin.version>1.10.3</frontend-maven-plugin.version>
         <frontend-maven-plugin.node.version>v13.7.0</frontend-maven-plugin.node.version>
         <frontend-maven-plugin.npm.version>6.14.8</frontend-maven-plugin.npm.version>
-        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
     </properties>
 
     <parent>
@@ -126,22 +127,45 @@
 
     <build>
         <finalName>varmetrics</finalName>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot-starter.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${maven-failsafe-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <version>${frontend-maven-plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot-starter.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven-dependency-plugin.version}</version>
             </plugin>
 
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>${frontend-maven-plugin.version}</version>
                 <executions>
                     <!-- Загружаем nodejs и npm во временную директорию-->
                     <execution>
@@ -205,6 +229,11 @@
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <profiles>
+                                <profile>DEV</profile>
+                            </profiles>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>pre-integration-test</id>
@@ -212,12 +241,6 @@
                                 <goals>
                                     <goal>start</goal>
                                 </goals>
-                                <configuration>
-                                    <profiles>
-                                        <profile>DEV</profile>
-                                    </profiles>
-                                    <fork>true</fork>
-                                </configuration>
                             </execution>
                             <execution>
                                 <id>post-integration-test</id>
