--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.varmetrics</groupId>
     <artifactId>varmetrics</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0.RELEASE</version>
     <packaging>jar</packaging>
     <name>varmetrics</name>
 
