VAR-68 Добавил repackage

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <java.version>11</java.version>
         <h2.url>jdbc:h2:mem:DbVarMetrics;DB_CLOSE_DELAY=-1;</h2.url>
+        <app.mainClass>com.varmetrics.Application</app.mainClass>
 
         <!-- Main configuration -->
         <spring-boot-starter.version>2.3.5.RELEASE</spring-boot-starter.version>
@@ -127,6 +128,25 @@
 
     <build>
         <finalName>varmetrics</finalName>
+        <directory>${project.basedir}/target/</directory>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>static</directory>
+                <targetPath>static</targetPath>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
 
         <pluginManagement>
             <plugins>
@@ -157,6 +177,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>${app.mainClass}</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
