--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
         <profile>
             <id>run.it</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
