VAR-68 Добавил repackage

--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
         <profile>
             <id>run.it</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
@@ -260,11 +260,11 @@
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-maven-plugin</artifactId>
                         <configuration>
+                            <!-- Если отключены все тесты, то нет смысла стартовать -->
+                            <skip>${skipTests}</skip>
                             <profiles>
                                 <profile>DEV</profile>
                             </profiles>
-                            <!-- Если отключены все тесты, то нет смысла стартовать -->
-                            <skip>${skipTests}</skip>
                         </configuration>
                         <executions>
                             <execution>
